// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlastResultTable tests should render without any hits 1`] = `
<DocumentFragment>
  <table
    class="data-table data-table--compact data-table--fixed"
  >
    <thead>
      <tr>
        <th
          class="data-table__header-cell--checkbox"
        >
           
        </th>
        <th
          class=""
        >
          Accession
        </th>
        <th
          class=""
        >
          Gene
        </th>
        <th
          class=""
        >
          Protein
        </th>
        <th
          class=""
        >
          Organism
        </th>
        <th
          class=""
          style="width: 40vw;"
        >
          <div
            class="query-sequence-wrapper"
          >
            <protvista-navigation
              length="6"
              title="Query"
            />
          </div>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</DocumentFragment>
`;

exports[`BlastResultTable tests should render, and toggle the extra HSPs 1`] = `
<DocumentFragment>
  <table
    class="data-table data-table--compact data-table--fixed"
  >
    <thead>
      <tr>
        <th
          class="data-table__header-cell--checkbox"
        >
           
        </th>
        <th
          class=""
        >
          Accession
        </th>
        <th
          class=""
        >
          Gene
        </th>
        <th
          class=""
        >
          Protein
        </th>
        <th
          class=""
        >
          Organism
        </th>
        <th
          class=""
          style="width: 40vw;"
        >
          <div
            class="query-sequence-wrapper"
          >
            <protvista-navigation
              length="30"
              title="Query"
            />
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <input
            aria-label="U6MKN0"
            data-id="U6MKN0"
            type="checkbox"
          />
        </td>
        <td
          class="data-table__cell--ellipsis"
        >
          <a
            href="/uniprotkb/U6MKN0"
          >
            <span
              class="entry-title__status icon--unreviewed"
              title="This marks an unreviewed UniProtKB entry"
            >
              <test-file-stub />
            </span>
            U6MKN0
          </a>
        </td>
        <td
          class="data-table__cell--ellipsis"
        >
          ENH_00046930
        </td>
        <td
          class="data-table__cell--ellipsis"
        >
          Uncharacterized protein
        </td>
        <td
          class="data-table__cell--ellipsis"
        >
          <a
            href="/taxonomy/51315"
          >
            Eimeria necatrix
          </a>
        </td>
        <td
          class="data-table__cell--ellipsis"
        >
          <div
            class="data-table__blast-hsp"
          >
            <div>
              <div
                class="data-table__blast-hsp__tracks"
              >
                <section
                  class="data-table__blast-hsp__blast-track"
                >
                  <protvista-track
                    data-testid="blast-summary-track"
                    height="10"
                    length="30"
                    title="Start: 3
End: 30
Hit length: 486"
                  />
                </section>
                <span
                  class="data-table__blast-hsp__blast-params"
                >
                  <button
                    class="chip chip--compact hsp_identity primary"
                    type="button"
                  >
                    7.1%
                  </button>
                  <button
                    class="chip chip--compact hsp_bit_score secondary"
                    type="button"
                  >
                    41.5874
                  </button>
                  <button
                    class="chip chip--compact hsp_expect secondary"
                    type="button"
                  >
                    0.0048
                  </button>
                </span>
              </div>
            </div>
            <button
              class="button tertiary"
              type="button"
            >
              +1 more
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
